--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,9 +1,10 @@
 .header{
-    background: linear-gradient(rgba(0,0,0,0.35),rgba(0,0,0,0.35)),url("./img/woman-in-orange-shirt-with-tattoo-on-her-left-hand-4125670.webp");
+    background: linear-gradient(rgba(0,0,0,0.35),rgba(0, 0, 0, 0.747)),url("../img/wm.webp");
     height: 100vh;
     background-size: cover;
     background-position: center;
     position: relative;
+    font-family: 'Poppins', sans-serif;
 
     &__container{
         position: absolute;
@@ -17,6 +18,7 @@
             font-size: 4.2rem;
             letter-spacing: 1px;
             line-height: 5rem;
+            
         }
 
         &--subtitle{
