--- a/css/style.css
+++ b/css/style.css
@@ -148,10 +148,10 @@ body {
   padding: 14px 34px;
   font-size: 1.8rem; }
   .btn--primary {
-    background: #e900e9;
+    background: rgba(233, 7, 176, 0.747);
     transition: background .3s ease-out; }
     .btn--primary:hover {
-      background: #c10ec7; }
+      background: #fd02f1; }
   .btn--rounded {
     border-radius: 250px; }
 
@@ -160,10 +160,10 @@ body {
   height: 300px;
   border: 1px solid #ededed;
   padding: 5rem 2rem;
-  color: #06eccd;
+  color: rgba(233, 7, 176, 0.747);
   transition: all .2s ease-in; }
   .card:hover {
-    background: #e900e9;
+    background: rgba(233, 7, 176, 0.747);
     color: #fff; }
   .card:hover .card__body--subtitle {
     color: #fff; }
@@ -176,20 +176,23 @@ body {
   .card__body {
     padding: 3rem 0;
     text-align: center;
+    font-family: 'Poppins', sans-serif;
     color: inherit; }
     .card__body--title {
       font-size: 2.4rem;
       color: inherit; }
     .card__body--subtitle {
       font-size: 1.4rem;
-      color: #777; }
+      text-transform: initial;
+      color: #333; }
 
 .header {
-  background: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url("/img/woman-in-orange-shirt-with-tattoo-on-her-left-hand-4125670.webp");
+  background: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.747)), url("../img/wm.webp");
   height: 100vh;
   background-size: cover;
   background-position: center;
-  position: relative; }
+  position: relative;
+  font-family: 'Poppins', sans-serif; }
   .header__container {
     position: absolute;
     top: 46%;
@@ -225,21 +228,25 @@ body {
       cursor: pointer; }
   .nav__logo * {
     color: #fff;
-    font-size: 2.4rem;
+    font-size: 4rem;
     font-weight: 700;
     text-transform: uppercase;
-    letter-spacing: 0.2px; }
+    border: 2px solid rgba(233, 7, 176, 0.747);
+    padding: 10px 10px; }
   .nav__bar {
     list-style: none; }
     .nav__bar--list {
       display: inline;
       padding: 0 1.2rem; }
     .nav__bar--link {
+      border: 2px solid transparent;
       color: #fff;
       text-decoration: none;
       font-size: 1.6rem;
       text-transform: uppercase;
       font-weight: 300; }
+      .nav__bar--link:hover {
+        border-bottom: 2px solid rgba(233, 7, 176, 0.747); }
 
 @media only screen and (max-width: 1024px) {
   .nav {
@@ -270,7 +277,8 @@ body {
         font-size: 1.6rem; } }
 
 section {
-  margin: 14rem 0; }
+  margin: 14rem 0;
+  font-family: 'Poppins', sans-serif; }
 
 .welcome-pic {
   width: 100%;
